--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 </head>
 <body>
     <div class="wrapper">
-
+        <div class="modal">
+            <div class="modal-content">
+                <h1>Please enter the book details below</h1>
+            </div>
+        </div>
     </div>
 </body>
 </html>
