--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div class="wrapper">
         <div class="modal">
             <div class="modal-content">
+                <span class="close">&times;</span>
                 <h1>Please enter the book details below</h1>
             </div>
         </div>
