--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <div class="modal">
+        <div id="modal" class="modal">
             <div class="modal-content">
                 <span class="close">&times;</span>
                 <h1>Please enter the book details below</h1>
