--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <div class="wrapper">
+        <button type="button" id="modalBtn">Click here to add a book</button>
         <div id="modal" class="modal">
             <div class="modal-content">
                 <span class="close">&times;</span>
