--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <button type="button" id="modalBtn">Click here to add a book</button>
         <div id="modal" class="modal">
             <div class="modal-content">
-                <span class="close">&times;</span>
+                <span id="modalClose" class="close">&times;</span>
                 <h1>Please enter the book details below</h1>
             </div>
         </div>
