--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
             <div class="modal-content">
                 <span id="modalClose" class="close">&times;</span>
                 <h1>Please enter the book details below</h1>
+                <form>
+                    
+                </form>
             </div>
         </div>
     </div>
