--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
                 <span id="modalClose" class="close">&times;</span>
                 <h1>Please enter the book details below</h1>
                 <form>
-                    
+                    <div>
+                        <label for="title">Please Enter the Book title:<br>
+                            <input type="text" id="title" name="title">
+                        </label>
+                    </div>
                 </form>
             </div>
         </div>
