--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
                         <label for="title">Please Enter the Book title:<br>
                             <input type="text" id="title" name="title">
                         </label>
+                        <div>
+                            <label for="author">Please Enter the Authors name:<br>
+                                <input type="text" id="author" name="author">
+                            </label>
+                        </div>
                     </div>
                 </form>
             </div>
