--- a/index.html
+++ b/index.html
@@ -20,11 +20,19 @@
                         <label for="title">Please Enter the Book title:<br>
                             <input type="text" id="title" name="title">
                         </label>
-                        <div>
-                            <label for="author">Please Enter the Authors name:<br>
-                                <input type="text" id="author" name="author">
-                            </label>
-                        </div>
+                    </div>
+                    <div>
+                        <label for="title">Please Enter the Book title:<br>
+                            <input type="text" id="title" name="title">
+                        </label>
+                    </div>
+                    <div>
+                        <label for="status">Please select the read status:<br>
+                            <select type="" id="status" name="status">
+                                <option value="read">Read</option>
+                                <option value="unread">Unread</option>
+                            </select>
+                        </label>
                     </div>
                 </form>
             </div>
