--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                             </select>
                         </label>
                     </div>
+                    <button type="button" id="modalAddBook">Click here to add book</button>
                 </form>
             </div>
         </div>
