--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     </div>
                     <div>
                         <label for="title">Please Enter the Book title:<br>
-                            <input type="text" id="title" name="title">
+                            <input type="text" id="author" name="author">
                         </label>
                     </div>
                     <div>
