--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         </label>
                     </div>
                     <div>
-                        <label for="title">Please Enter the Book title:<br>
+                        <label for="title">Please Enter the Author's name:<br>
                             <input type="text" id="author" name="author">
                         </label>
                     </div>
