--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
                 </form>
             </div>
         </div>
+        <div id="bookContainer">
+
+        </div>
     </div>
 </body>
 </html>
