--- a/index.html
+++ b/index.html
@@ -39,6 +39,17 @@
             </div>
         </div>
         <div id="bookContainer">
+        <table class="book-table">
+            <thead>
+                <th>
+                    <td>Title</td>
+                    <td>Author</td>
+                    <td>Read</td>
+                </th>
+            </thead>
+            <tbody>
+            </tbody>
+        </table>
 
         </div>
     </div>
