--- a/index.html
+++ b/index.html
@@ -39,13 +39,11 @@
             </div>
         </div>
         <div id="bookContainer">
-        <table class="book-table">
+        <table id="bookTable" class="book-table">
             <thead>
-                <th>
-                    <td>Title</td>
-                    <td>Author</td>
-                    <td>Read</td>
-                </th>
+                <th>Title</th>
+                <th>Author</th>
+                <th>Read</th>
             </thead>
             <tbody>
             </tbody>
