--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                 <th>Title</th>
                 <th>Author</th>
                 <th>Read</th>
+                <th>Remove Book?</th>
             </thead>
             <tbody>
             </tbody>
