--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <th>Read</th>
                 <th>Remove Book?</th>
             </thead>
-            <tbody>
+            <tbody id="bookBody">
             </tbody>
         </table>
 
