--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                     <div>
                         <label for="status">Please select the read status:<br>
                             <select type="" id="status" name="status">
-                                <option value="read">Read</option>
-                                <option value="unread">Unread</option>
+                                <option value="Read">Read</option>
+                                <option value="Unread">Unread</option>
                             </select>
                         </label>
                     </div>
