Updated index style
Added class to modalBtn. Added style to modal-Btn

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <button type="button" id="modalBtn">Click here to add a book</button>
+        <button type="button" id="modalBtn" class="modal-Btn">Click here to add a book</button>
         <div id="modal" class="modal">
             <div class="modal-content">
                 <span id="modalClose" class="close">&times;</span>
