--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
         </div>
         <div id="bookContainer">
         <table id="bookTable" class="book-table">
-            <thead>
-                <th>Title</th>
-                <th>Author</th>
-                <th>Read</th>
+            <thead class="thead">
+                <th class="th-seperator">Title</th>
+                <th class="th-seperator">Author</th>
+                <th class="th-seperator">Read</th>
                 <th>Remove Book?</th>
             </thead>
             <tbody id="bookBody">
