--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
                 <th class="th-seperator">Title</th>
                 <th class="th-seperator">Author</th>
                 <th class="th-seperator">Read</th>
-                <th>Remove Book?</th>
+                <th>Remove Book</th>
             </thead>
-            <tbody id="bookBody">
+            <tbody id="bookBody" class="book-Body">
             </tbody>
         </table>
 
