--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <th class="th-seperator">Title</th>
                 <th class="th-seperator">Author</th>
                 <th class="th-seperator">Read</th>
-                <th class="th-seperator">Remove Book</th>
+                <th>Remove Book</th>
             </thead>
             <tbody id="bookBody" class="book-Body">
             </tbody>
