--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
                 <span id="modalClose" class="close">&times;</span>
                 <h1>Please enter the book details below</h1>
                 <form>
-                    <div>
+                    <div class="form-input">
                         <label for="title">Please Enter the Book title:<br>
                             <input type="text" id="title" name="title">
                         </label>
                     </div>
-                    <div>
+                    <div class="form-input">
                         <label for="title">Please Enter the Author's name:<br>
                             <input type="text" id="author" name="author">
                         </label>
                     </div>
-                    <div>
+                    <div class="form-input">
                         <label for="status">Please select the read status:<br>
                             <select type="" id="status" name="status">
                                 <option value="Read">Read</option>
