--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <div class="form-input">
                         <label for="status">Please select the read status:<br>
                             <select type="" id="status" name="status">
-                                <option value="Read">Read</option>
+                                <option value="Read" selected="selected">Read</option>
                                 <option value="Unread">Unread</option>
                             </select>
                         </label>
